JEKT-1367 - 🔁 Modified - Removed bad mapping for STCD6 for FSN Config setting     - Pipeline        - SAP_01_MD_CUST_MRS_FSN_SVS_GEU_MBP     - Dataset        - DS_SAP_01_KNA1

--- a/src/datasets/DS_SAP_01_KNA1/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_KNA1/pbt_aspects.yml
@@ -2,13 +2,6 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MANDT
     type: string
     nullable: true
@@ -842,13 +835,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: STCD5
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: XICMS
     type: string
     nullable: true
@@ -1073,27 +1059,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: FEE_SCHEDULE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DUNS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DUNS4
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: PSOFG
     type: string
     nullable: true
@@ -1192,343 +1157,266 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B
+  - name: ZZDIGAC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B
+  - name: ZZLICNO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE
+  - name: ZZPATRP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDBRATING
+  - name: ZZPRCPN
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZAGREEEXP
+  - name: ZZELPID
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZTAXNO
+  - name: ZZELPTY
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVATTIN
+  - name: ZZELPRX
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZCSTTIN
+  - name: ZZSHFLG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_1
+  - name: ZZSTRAT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_1
+  - name: ZZREACH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_1
+  - name: ZZSCIND
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_2
+  - name: ZZPO_REQUIRED
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_2
+  - name: ZZBSTKD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_2
+  - name: ZZPO_EXPIRY_DATE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_3
+  - name: ZZPO_SPLIT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_3
+  - name: ZZPKSLP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_3
+  - name: ZZNOSPLIT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZDLN20B_4
+  - name: ZZEXCLUDE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEV0121B_4
+  - name: ZZNOPRICE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZEXPDATE_4
+  - name: ZZFIFO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC1
+  - name: ZZILP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID1
+  - name: ZZOVERRIDESHIP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC2
+  - name: ZASIGHT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID2
+  - name: ZZDELSPLIT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC3
+  - name: ZZACVDIRECT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID3
+  - name: ZZPO_LENGTH
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC4
+  - name: ZZPO_RET
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID4
+  - name: ZZPKSLPSORT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZLIC5
+  - name: ZZCOURREF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZVALID5
+  - name: ZZCOURSRVLVL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SURGEON
+  - name: ZZPARORDCRT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: CVP_XBLCK
+  - name: ZZCUSTFLAG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SUFRAMA
+  - name: ZZCLEAR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RG
+  - name: ZZRESORDCRT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: EXP
+  - name: ZZEACKMTD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: UF
+  - name: ZZEASNMTD
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RGDATE
+  - name: ZZSUMMARYBILL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: RIC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RNE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RNEDATE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNAE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LEGALNAT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CRTN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ICMSTAXPAY
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INDTYP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TDT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: COMSIZE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DECREGPC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZINV_CONSOL
+  - name: ZZVOUREDEEM
     type: string
     nullable: true
     metadata:
@@ -1570,7 +1458,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
