JEKT-1887 🔁 Modified     - Pipeline        - SAP_01_MD_MATL_LOC_HMD     - Dataset        - MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -919,3 +919,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: PLNG_PLNT_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
