--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2198,6 +2198,23 @@ pipelines:
       - datasets/MD_MATL_LOC
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_SJD:
+    name: JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_SJD
+    description: Pipeline to bba_bbl_bbn SAP systems for MD_MATL_LOC
+    author: ggrilo1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-22 14:36:43'
+    modifiedAt: '2023-05-22 15:44:59'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_03_F4101
+      - datasets/DS_JDE_4102
+      outputs:
+      - datasets/MD_MATL_LOC
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -7239,6 +7256,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-05-19 18:00:38'
         modifiedAt: '2023-05-19 18:00:38'
+  datasets/DS_JDE_03_F4101:
+    name: DS_JDE_03_F4101
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-05-22 14:47:12'
+    modifiedAt: '2023-05-22 14:47:12'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-05-22 14:47:12'
+        modifiedAt: '2023-05-22 14:47:12'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
