JEKT-1887 🔁 Modified     - Job        - JOB_MD_MATL_LOC

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -8854,6 +8854,7 @@ jobs:
     - pipelines/JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_GMD_DEU_JEM_JES_SJD_DJD
     - pipelines/SAP_MD_MATL_LOC_BWI
     - pipelines/SAP_MD_MATL_LOC_FSN_GEU_BBA_ATL
+    - pipelines/JDE_MD_MATL_LOC_JET_JSW_MTR_BW2_SJD
     - pipelines/SAP_MD_MATL_LOC_BBL_HCS_TAI
     - pipelines/SAP_01_MD_MATL_LOC_HMD
     - pipelines/SAP_MD_MATL_LOC_MBP_SVS_BBL_BBN_HCS_P01_MRS_TAI
@@ -8863,7 +8864,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-03 10:09:49'
-    modifiedAt: '2023-05-19 23:34:42'
+    modifiedAt: '2023-05-22 17:08:24'
     author: ggrilo1@its.jnj.com
   jobs/MD_MATL_JOB:
     name: MD_MATL_JOB
