--- a/src/datasets/MD_MATL_INV/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_INV/pbt_aspects.yml
@@ -53,14 +53,14 @@ schema:
       tags: []
   - name: SPCL_STCK_IND
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: PRTY_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
