JEKT-2074 ❇️ New     - Pipeline        - SAP_MD_MATL_VALUT_HIST     - Dataset        - DS_SAP_01_MBEWH        - DS_SAP_02_MARA
🔁 Modified
    - Dataset
       - MD_MATL_VALUT_HIST

--- a/src/datasets/DS_SAP_01_MBEWH/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_MBEWH/pbt_aspects.yml
@@ -2,127 +2,113 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: SRC_SYS_CD
-    type: string
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MATL_NUM
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VALUT_AREA_CD
+  - name: MATNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VALUT_TYPE_CD
+  - name: MANDT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PSTNG_YR
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PSTNG_PER
-    type: integer
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_CNTL_IND
+  - name: LFMON
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: TOT_STK_QTY
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TOT_VAL_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MVG_AVG_PRC_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_AMT
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PRC_UNIT_NBR
-    type: decimal(18,4)
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VALUT_CLS_CD
+  - name: LFGJA
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: BASE_UOM_CD
+  - name: BWTAR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_ETL_ID
-    type: integer
-    nullable: false
+  - name: BWKEY
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_CRT_DTTM
-    type: timestamp
-    nullable: false
+  - name: LBKUM
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: DAI_UPDT_DTTM
-    type: timestamp
-    nullable: false
+  - name: SALK3
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l0_upt_
-    type: timestamp
+  - name: VPRSV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VERPR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: STPRS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PEINH
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: BKLAS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SALKV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VKSAL
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -135,21 +121,35 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _pk_md5_
-    type: string
+  - name: _upt_
+    type: timestamp
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _l1_upt_
-    type: timestamp
-    nullable: false
+  - name: _kafkaOffset_
+    type: long
+    nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _createTime_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _kafkaTimestamp_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _infa_bigint_sequence_
     type: string
     nullable: true
     metadata:
