--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2596,6 +2596,23 @@ pipelines:
       - datasets/MD_MATL_BOM
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_VALUT_HIST:
+    name: SAP_MD_MATL_VALUT_HIST
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-22 21:07:17'
+    modifiedAt: '2023-05-23 14:34:16'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MBEWH
+      - datasets/DS_SAP_02_MARA
+      outputs:
+      - datasets/MD_MATL_VALUT_HIST
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -3952,7 +3969,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-23 14:26:23'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8162,6 +8179,36 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-05-18 18:02:20'
         modifiedAt: '2023-05-18 18:02:20'
+  datasets/DS_SAP_01_MBEWH:
+    name: DS_SAP_01_MBEWH
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-05-22 21:11:57'
+    modifiedAt: '2023-05-22 21:11:57'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-05-22 21:11:57'
+        modifiedAt: '2023-05-22 21:11:57'
+  datasets/DS_SAP_02_MARA:
+    name: DS_SAP_02_MARA
+    description: ''
+    author: hgermi1@its.jnj.com
+    createdAt: '2023-05-22 21:14:53'
+    modifiedAt: '2023-05-22 21:14:54'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: hgermi1@its.jnj.com
+        createdAt: '2023-05-22 21:14:53'
+        modifiedAt: '2023-05-22 21:14:53'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
