JEKT-1887 🔁 Modified     - Pipeline        - SAP_MD_MATL_LOC_MBP_SVS_BBN_P01_MRS     - Dataset        - MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -821,27 +821,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ACT_PUSH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MTS_MTO_FL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: CNSMPTN_MODE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: MATL_STS_DESC
     type: string
     nullable: true
@@ -915,6 +894,13 @@ schema:
   - name: _l1_upt_
     type: timestamp
     nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: PLNG_PLNT_CD
+    type: string
+    nullable: true
     metadata:
       description: ''
       mappings: []
