--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -821,6 +821,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MTS_MTO_FL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: MATL_STS_DESC
     type: string
     nullable: true
@@ -894,13 +901,6 @@ schema:
   - name: _l1_upt_
     type: timestamp
     nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PLNG_PLNT_CD
-    type: string
-    nullable: true
     metadata:
       description: ''
       mappings: []
