JEKT-1887 🔁 Modified     - Pipeline        - SAP_MD_MATL_LOC_FSN_GEU_BBA_ATL     - Dataset        - MD_MATL_LOC

--- a/src/datasets/MD_MATL_LOC/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_LOC/pbt_aspects.yml
@@ -310,6 +310,27 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MMS_FIN_CLSN_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: VMI_IND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSTR_PLNG_FMLY_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: VALUT_CAT
     type: string
     nullable: true
@@ -800,7 +821,14 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: MATL_STS_DESC
+  - name: MTS_MTO_FL
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MATL_PLNR_NM
     type: string
     nullable: true
     metadata:
