JEKT-2074 🔁 Modified     - Pipeline        - SAP_MD_MATL_VALUT_HIST     - Dataset        - DS_SAP_01_MBEWH

--- a/src/pipelines/SAP_MD_MATL_VALUT_HIST/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_MATL_VALUT_HIST/pbt_aspects.yml
@@ -1,6 +1,8 @@
 version: 1
 configurations:
 - GEU
+- FSN
+- ATL
 - MBP
 - BBA
 - BBL
@@ -10,6 +12,7 @@ configurations:
 - HCS
 - HM2
 - BBN
+- SVS
 - TAI
 - BWI
 dependencies: []
