JEKT-2074 🔁 Modified     - Pipeline        - SAP_MD_MATL_VALUT_HIST_BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2597,14 +2597,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_MD_MATL_VALUT_HIST:
-    name: SAP_MD_MATL_VALUT_HIST
+    name: SAP_MD_MATL_VALUT_HIST_BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HM2
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-22 21:07:17'
-    modifiedAt: '2023-05-24 01:33:00'
+    modifiedAt: '2023-05-24 01:39:50'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MBEWH
