--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2604,7 +2604,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-22 21:07:17'
-    modifiedAt: '2023-05-24 01:39:50'
+    modifiedAt: '2023-05-24 01:44:20'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MBEWH
@@ -10134,6 +10134,31 @@ jobs:
     createdAt: '2023-05-05 21:28:17'
     modifiedAt: '2023-05-10 13:37:20'
     author: lsorarra@its.jnj.com
+  jobs/JOB_MD_MATL_VALUT_HIST_BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HM2:
+    name: JOB_MD_MATL_VALUT_HIST_BBN_BBA_BBL_P01_TAI_MRS_HCS_GEU_BWI_MBP_FSN_ATL_SVS_HM2
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_MATL_VALUT_HIST
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-24 01:44:03'
+    modifiedAt: '2023-05-24 01:52:13'
+    author: hgermi1@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
