JEKT-2509 Create dataset and initial filter gem ❇️ New     - Pipeline        - SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT     - Dataset        - DS_SAP_01_T052U

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2596,6 +2596,21 @@ pipelines:
       - datasets/MD_MATL_BOM
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT:
+    name: SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
+    description: Mapping T052U for all SAP systems
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-24 12:46:11'
+    modifiedAt: '2023-05-24 12:54:03'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T052U
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -8162,6 +8177,21 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-05-18 18:02:20'
         modifiedAt: '2023-05-18 18:02:20'
+  datasets/DS_SAP_01_T052U:
+    name: DS_SAP_01_T052U
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-24 12:53:16'
+    modifiedAt: '2023-05-24 12:53:16'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-24 12:53:16'
+        modifiedAt: '2023-05-24 12:53:16'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
