JEKT-2509 Created all config 🔁 Modified     - Pipeline        - SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT

--- a/src/pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT/pbt_aspects.yml
+++ b/src/pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT/pbt_aspects.yml
@@ -1,3 +1,19 @@
 version: 1
 configurations:
+- svs
+- p01
+- bbl
+- hmd
+- mbp
+- bba
+- bwi
+- tai
+- mrs
+- hcs
 - default
+- hm2
+- atl
+- bbn
+- geu
+- fsn
+dependencies: []
