JEKT-2509 Created job ❇️ New     - Job        - JOB_MD_OWN_EXPLN_FOR_TERM_OF_PMT
🔁 Modified
    - Job
       - JOB_MD_MATL *** Note that I didn't change anything I just opened one of the jobs to take a look ***

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -9821,7 +9821,7 @@ jobs:
       clusterId: null
     enabled: null
     createdAt: '2023-05-05 13:05:54'
-    modifiedAt: '2023-05-12 21:12:41'
+    modifiedAt: '2023-05-24 16:08:47'
     author: natkins7@its.jnj.com
   jobs/MD_MATL_HM2_JOB:
     name: JOB_MD_MATL_HM2
@@ -10117,6 +10117,31 @@ jobs:
     createdAt: '2023-05-05 21:28:17'
     modifiedAt: '2023-05-10 13:37:20'
     author: lsorarra@its.jnj.com
+  jobs/JOB_MD_OWN_EXPLN_FOR_TERM_OF_PMT:
+    name: JOB_MD_OWN_EXPLN_FOR_TERM_OF_PMT
+    description: ''
+    fabricUID: 32
+    scheduler:
+      Databricks: {}
+    cloudProvider: null
+    jobSize: Prophecy_Small
+    scheduleCron: 0 0 0 1/1 * ? *
+    timeout: null
+    alerting:
+      emails: ''
+      onStart: false
+      onSuccess: false
+      onFailure: false
+    pipelines:
+    - pipelines/SAP_MD_OWN_EXPLN_FOR_TERM_OF_PMT
+    jobClusterMode:
+      clusterMode:
+        Single: {}
+      clusterId: null
+    enabled: null
+    createdAt: '2023-05-24 16:07:26'
+    modifiedAt: '2023-05-24 16:17:27'
+    author: natkins7@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
