--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -559,15 +559,15 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_CRNCY_TEXT_2:
-    name: MD_CRNCY_TEXT_2_gmd_bw2_deu_jem_jes_jet_jsw_sjd
+    name: MD_CRNCY_TEXT_GMD_BW2_DEU_JES_JEM_JET_JSW_SJD_DJD
     description: Mapping pipeline  ['gmd', 'bw2', 'deu', 'jem', 'jes', 'jet', 'jsw',
-      'sjd']
+      'sjd', 'djd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 02:59:36'
+    modifiedAt: '2023-05-25 11:18:08'
     datasets:
       inputs: []
       outputs:
