--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -575,14 +575,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_CRNCY_TEXT_3:
-    name: MD_CRNCY_TEXT_3_hm2
-    description: Mapping pipeline  ['hm2']
+    name: MD_CRNCY_TEXT_HMD
+    description: Mapping pipeline  ['hm2', 'hmd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:00:46'
+    modifiedAt: '2023-05-25 11:36:54'
     datasets:
       inputs: []
       outputs:
