JEKT-2218 🔁 Modified Package and pipeline names and mandt on config     - Pipeline        - MD_CRNCY_TEXT_BBL_BBN_MRS_P01_MBP_BWI_SVS_ATL

--- a/src/pipelines/MD_CRNCY_TEXT_1/pbt_aspects.yml
+++ b/src/pipelines/MD_CRNCY_TEXT_1/pbt_aspects.yml
@@ -1,11 +1,12 @@
 version: 1
 configurations:
 - svs
-- btb_na
 - p01
-- btb_latam
+- bbl
 - mbp
 - bwi
-- atlas
 - mrs
 - default
+- atl
+- bbn
+dependencies: []
