--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -543,15 +543,15 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_CRNCY_TEXT_1:
-    name: MD_CRNCY_TEXT_1_p01_btb_na_btb_latam_mrs_mbp_bwi_svs_atlas
-    description: Mapping pipeline  ['p01', 'btb_na', 'btb_latam', 'mrs', 'mbp', 'bwi',
-      'svs', 'atlas']
+    name: MD_CRNCY_TEXT_BBL_BBN_MRS_P01_MBP_BWI_SVS_ATL
+    description: Mapping pipeline  ['p01', 'bbn', 'bbl', 'mrs', 'mbp', 'bwi', 'svs',
+      'atl']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:01:31'
+    modifiedAt: '2023-05-25 11:49:46'
     datasets:
       inputs: []
       outputs:
