--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -559,7 +559,7 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_CRNCY_TEXT_2:
-    name: MD_CRNCY_TEXT_GMD_BW2_DEU_JES_JEM_JET_JSW_SJD_DJD
+    name: JDE_MD_CRNCY_TEXT_GMD_BW2_DEU_JES_JEM_JET_JSW_SJD_DJD
     description: Mapping pipeline  ['gmd', 'bw2', 'deu', 'jem', 'jes', 'jet', 'jsw',
       'sjd', 'djd']
     author: skostadi@its.jnj.com
@@ -567,7 +567,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 11:18:08'
+    modifiedAt: '2023-05-25 12:15:00'
     datasets:
       inputs: []
       outputs:
@@ -575,14 +575,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_CRNCY_TEXT_3:
-    name: MD_CRNCY_TEXT_HMD
+    name: SAP_MD_CRNCY_TEXT_HMD
     description: Mapping pipeline  ['hm2', 'hmd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 11:36:54'
+    modifiedAt: '2023-05-25 12:13:41'
     datasets:
       inputs: []
       outputs:
