--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -649,14 +649,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_BOM_ITM_NODE_8:
-    name: MD_BOM_ITM_NODE_8_hm2
-    description: Mapping pipeline  ['hm2']
+    name: SAP_MD_BOM_ITM_NODE_HMD
+    description: Mapping pipeline  ['hm2', 'hmd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 02:39:29'
+    modifiedAt: '2023-05-25 15:23:52'
     datasets:
       inputs: []
       outputs:
