JEKT-2457 🔁 Modified Pipeline and package names added config for additional systems     - Pipeline        - SAP_MD_BOM_ITM_NODE_TAI_BWI_MBP_HCS_MRS_P01_GEU_BBN_BBL_BBA_ATL_FSN_SVS

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -633,15 +633,15 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_BOM_ITM_NODE_7:
-    name: MD_BOM_ITM_NODE_7_taishan_bwi_mbp_hcs_mrs_p01_geu_btb_na_btb_latam_bba
-    description: Mapping pipeline  ['taishan', 'bwi', 'mbp', 'hcs', 'mrs', 'p01',
-      'geu', 'btb_na', 'btb_latam', 'bba']
+    name: SAP_MD_BOM_ITM_NODE_TAI_BWI_MBP_HCS_MRS_P01_GEU_BBN_BBL_BBA_ATL_FSN_SVS
+    description: Mapping pipeline  ['tai', 'bwi', 'mbp', 'hcs', 'mrs', 'p01', 'geu',
+      'bbn', 'bbl', 'bba', 'atl', 'fsn', 'svs']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 02:40:08'
+    modifiedAt: '2023-05-25 15:45:30'
     datasets:
       inputs: []
       outputs:
