--- a/src/pipelines/MD_BOM_ITM_NODE_7/pbt_aspects.yml
+++ b/src/pipelines/MD_BOM_ITM_NODE_7/pbt_aspects.yml
@@ -1,14 +1,17 @@
 version: 1
 configurations:
-- taishan
-- btb_na
+- svs
 - p01
-- btb_latam
+- bbl
 - mbp
 - bba
 - bwi
+- tai
 - mrs
 - hcs
 - default
+- atl
+- bbn
 - geu
+- fsn
 dependencies: []
