--- a/src/datasets/MD_BOM_ITM_NODE/pbt_aspects.yml
+++ b/src/datasets/MD_BOM_ITM_NODE/pbt_aspects.yml
@@ -25,7 +25,7 @@ schema:
       tags: []
   - name: ALT_BOM_NUM
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -73,7 +73,7 @@ schema:
       mappings: []
       tags: []
   - name: DEL_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -81,6 +81,13 @@ schema:
       tags: []
   - name: _l0_upt_
     type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -123,13 +130,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
