JEKT-2457 🔁 Renamed pipeline and package added deleted to schema corrected config     - Pipeline        - JDE_MD_BOM_ITM_NODE_BW2_JES        - MD_BOM_ITM_NODE_6_jet     - Dataset        - MD_BOM_ITM_NODE

--- a/src/datasets/MD_BOM_ITM_NODE/pbt_aspects.yml
+++ b/src/datasets/MD_BOM_ITM_NODE/pbt_aspects.yml
@@ -25,7 +25,7 @@ schema:
       tags: []
   - name: ALT_BOM_NUM
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -73,7 +73,7 @@ schema:
       mappings: []
       tags: []
   - name: DEL_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
