JEKT-2457🔁 Modified Names config and schema and ran job     - Pipeline        - JDE_MD_BOM_ITM_NODE_JET     - Dataset        - MD_BOM_ITM_NODE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -618,14 +618,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_BOM_ITM_NODE_6:
-    name: MD_BOM_ITM_NODE_6_jet
+    name: JDE_MD_BOM_ITM_NODE_JET
     description: Mapping pipeline  ['jet']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 16:38:44'
+    modifiedAt: '2023-05-25 16:54:12'
     datasets:
       inputs: []
       outputs:
@@ -5814,7 +5814,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-25 16:45:01'
+    modifiedAt: '2023-05-25 16:54:03'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
