JEKT-2457❇️ New pipeline for djd     - Pipeline        - JDE_MD_BOM_ITM_NODE_DJD

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2868,6 +2868,21 @@ pipelines:
       - datasets/MD_SLS_DOC_PTNR_FUNC
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_BOM_ITM_NODE_DJD:
+    name: JDE_MD_BOM_ITM_NODE_DJD
+    description: Mapping pipeline  ['djd']
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-25 17:10:37'
+    modifiedAt: '2023-05-25 17:20:53'
+    datasets:
+      inputs: []
+      outputs:
+      - datasets/MD_BOM_ITM_NODE
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/DS_JDE_01_F0005_41:
     name: DS_JDE_01_F0005_41
