--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -588,14 +588,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_BOM_ITM_NODE_4:
-    name: MD_BOM_ITM_NODE_4_sjd
+    name: JDE_MD_BOM_ITM_NODE_SJD
     description: Mapping pipeline  ['sjd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 02:42:56'
+    modifiedAt: '2023-05-25 17:31:09'
     datasets:
       inputs: []
       outputs:
@@ -5829,7 +5829,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-25 17:24:59'
+    modifiedAt: '2023-05-25 17:31:09'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
