JEKT-2457 🔁 Modified Pipeline and package names config and schema to add deleted field     - Pipeline        - JDE_MD_BOM_ITM_NODE_JSW     - Dataset        - MD_BOM_ITM_NODE

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -603,14 +603,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_BOM_ITM_NODE_5:
-    name: MD_BOM_ITM_NODE_5_jsw
+    name: JDE_MD_BOM_ITM_NODE_JSW
     description: Mapping pipeline  ['jsw']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 02:42:18'
+    modifiedAt: '2023-05-25 17:37:16'
     datasets:
       inputs: []
       outputs:
@@ -5829,7 +5829,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-25 17:31:09'
+    modifiedAt: '2023-05-25 17:37:16'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
