JEKT-2083 Create new pipeline, dataset, filter gem and 40% of schema xform ❇️ New     - Pipeline        - SAP_MD_MFG_ORDER_HCS     - Dataset        - DS_SAP_01_AUFK

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2747,6 +2747,21 @@ pipelines:
       - datasets/MD_DELV
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MFG_ORDER_HCS:
+    name: SAP_MD_MFG_ORDER_HCS
+    description: MFG Orders for HCS system
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-26 07:40:04'
+    modifiedAt: '2023-05-26 08:42:50'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_AUFK
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -8313,6 +8328,21 @@ datasets:
         author: smille29@its.jnj.com
         createdAt: '2023-05-18 18:02:20'
         modifiedAt: '2023-05-18 18:02:20'
+  datasets/DS_SAP_01_AUFK:
+    name: DS_SAP_01_AUFK
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-26 08:03:36'
+    modifiedAt: '2023-05-26 08:03:37'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-26 08:03:36'
+        modifiedAt: '2023-05-26 08:03:36'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
