--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2755,11 +2755,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 07:40:04'
-    modifiedAt: '2023-05-26 08:42:50'
+    modifiedAt: '2023-05-26 09:31:30'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
-      outputs: []
+      outputs:
+      - datasets/MD_MFG_ORDER
     subgraphs: []
     dependencies: {}
 datasets:
@@ -3638,7 +3639,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-03-20 18:20:04'
+    modifiedAt: '2023-05-26 09:25:02'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
