JEKT-2083 Fixed minor issues and pushed all data to CDL 🔁 Modified     - Pipeline        - SAP_MD_MFG_ORDER_HCS     - Dataset        - MD_MFG_ORDER

--- a/src/datasets/MD_MFG_ORDER/pbt_aspects.yml
+++ b/src/datasets/MD_MFG_ORDER/pbt_aspects.yml
@@ -262,7 +262,7 @@ schema:
       mappings: []
       tags: []
   - name: EST_TOT_COSTS_OF_ORDR
-    type: string
+    type: decimal(18,4)
     nullable: true
     metadata:
       description: ''
