JEKT-2083 New pipeline created for GEU. Changed config & updated package name. Run 100 records in L1 to test. ❇️ New     - Pipeline        - SAP_MD_MFG_ORDER_GEU

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2763,6 +2763,22 @@ pipelines:
       - datasets/MD_MFG_ORDER
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MFG_ORDER_GEU:
+    name: SAP_MD_MFG_ORDER_GEU
+    description: MFG Orders for HCS system
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-26 09:58:48'
+    modifiedAt: '2023-05-26 10:03:25'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_AUFK
+      outputs:
+      - datasets/MD_MFG_ORDER
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
