JEKT-2500🔁 Modified pipeline and package names corrected config and added hmd changes in schema to add deleted and upt fields     - Pipeline        - SAP_MD_SUP_CO_HMD     - Dataset        - MD_SUP_CO

--- a/src/datasets/MD_SUP_CO/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_CO/pbt_aspects.yml
@@ -31,21 +31,21 @@ schema:
       mappings: []
       tags: []
   - name: PSTNG_BLK_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEL_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LDGR_ACCT_CD
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -73,7 +73,7 @@ schema:
       mappings: []
       tags: []
   - name: BLOK_SUP_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -87,6 +87,20 @@ schema:
       mappings: []
       tags: []
   - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _upt_
     type: timestamp
     nullable: true
     metadata:
@@ -130,13 +144,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
