--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -992,14 +992,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_1:
-    name: MD_SUP_CO_1_hm2
-    description: Mapping pipeline  ['hm2']
+    name: SAP_MD_SUP_CO_HMD
+    description: Mapping pipeline  ['hm2', 'hmd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:12:16'
+    modifiedAt: '2023-05-26 10:58:40'
     datasets:
       inputs: []
       outputs:
@@ -7223,7 +7223,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-25 03:16:50'
+    modifiedAt: '2023-05-26 10:58:40'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
