JEKT-2218🔁 added deleted and upt fields     - Pipeline        - JDE_MD_CRNCY_TEXT_GMD_BW2_DEU_JES_JEM_JET_JSW_SJD_DJD     - Dataset        - MD_CRNCY_TEXT

--- a/src/datasets/MD_CRNCY_TEXT/pbt_aspects.yml
+++ b/src/datasets/MD_CRNCY_TEXT/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: LANG_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -38,6 +38,20 @@ schema:
       mappings: []
       tags: []
   - name: _l0_upt_
+    type: timestamp
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _deleted_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: _upt_
     type: timestamp
     nullable: true
     metadata:
@@ -81,13 +95,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
