JEKT-2218🔁 Added deleted and upt fields     - Pipeline        - SAP_MD_CRNCY_TEXT_BBL_BBN_MRS_P01_MBP_BWI_SVS_ATL     - Dataset        - MD_CRNCY_TEXT

--- a/src/datasets/MD_CRNCY_TEXT/pbt_aspects.yml
+++ b/src/datasets/MD_CRNCY_TEXT/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: LANG_CD
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
