--- a/src/datasets/MD_MFG_ORDER/pbt_aspects.yml
+++ b/src/datasets/MD_MFG_ORDER/pbt_aspects.yml
@@ -394,3 +394,17 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MFG_ORDR_STTS_CD
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MFG_ORDR_STS_TXT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
