--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2771,10 +2771,12 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 09:58:48'
-    modifiedAt: '2023-05-26 10:03:25'
+    modifiedAt: '2023-05-26 11:57:38'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
+      - datasets/DS_SAP_01_JEST
+      - datasets/DS_SAP_01_TJ02T
       outputs:
       - datasets/MD_MFG_ORDER
     subgraphs: []
@@ -3655,7 +3657,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 09:35:24'
+    modifiedAt: '2023-05-26 11:57:32'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -8360,6 +8362,36 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-26 08:03:36'
         modifiedAt: '2023-05-26 08:03:36'
+  datasets/DS_SAP_01_JEST:
+    name: DS_SAP_01_JEST
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-26 10:36:07'
+    modifiedAt: '2023-05-26 10:36:07'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-26 10:36:07'
+        modifiedAt: '2023-05-26 10:36:07'
+  datasets/DS_SAP_01_TJ02T:
+    name: DS_SAP_01_TJ02T
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-26 11:18:56'
+    modifiedAt: '2023-05-26 11:18:56'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-26 11:18:56'
+        modifiedAt: '2023-05-26 11:18:56'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
