JEKT-2457 🔁 Deleted upt from schemstransform     - Pipeline        - JDE_MD_BOM_ITM_NODE_BW2_JES        - SAP_MD_BOM_ITM_NODE_HMD     - Dataset        - MD_BOM_ITM_NODE

--- a/src/datasets/MD_BOM_ITM_NODE/pbt_aspects.yml
+++ b/src/datasets/MD_BOM_ITM_NODE/pbt_aspects.yml
@@ -25,7 +25,7 @@ schema:
       tags: []
   - name: ALT_BOM_NUM
     type: string
-    nullable: false
+    nullable: true
     metadata:
       description: ''
       mappings: []
@@ -73,7 +73,7 @@ schema:
       mappings: []
       tags: []
   - name: DEL_IND
-    type: void
+    type: string
     nullable: true
     metadata:
       description: ''
@@ -88,13 +88,6 @@ schema:
       tags: []
   - name: _deleted_
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _upt_
-    type: timestamp
     nullable: true
     metadata:
       description: ''
