--- a/src/datasets/MD_CRNCY_TEXT/pbt_aspects.yml
+++ b/src/datasets/MD_CRNCY_TEXT/pbt_aspects.yml
@@ -18,7 +18,7 @@ schema:
       tags: []
   - name: LANG_CD
     type: string
-    nullable: true
+    nullable: false
     metadata:
       description: ''
       mappings: []
@@ -46,13 +46,6 @@ schema:
       tags: []
   - name: _deleted_
     type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _upt_
-    type: timestamp
     nullable: true
     metadata:
       description: ''
