JEKT-2083 Created new pipeline, changed package name ❇️ New     - Pipeline        - SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
🔁 Modified
    - Pipeline
       - SAP_MD_MFG_ORDER_GEU

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2771,7 +2771,25 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 09:58:48'
-    modifiedAt: '2023-05-26 12:24:18'
+    modifiedAt: '2023-05-26 12:29:27'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_AUFK
+      - datasets/DS_SAP_01_JEST
+      - datasets/DS_SAP_01_TJ02T
+      outputs:
+      - datasets/MD_MFG_ORDER
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS:
+    name: SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
+    description: MFG Orders for HCS system
+    author: natkins7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-05-26 12:35:49'
+    modifiedAt: '2023-05-26 12:44:57'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
