--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1007,14 +1007,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_10:
-    name: MD_SUP_CO_10_mbp
+    name: SAP_MD_SUP_CO_MBP
     description: Mapping pipeline  ['mbp']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:12:55'
+    modifiedAt: '2023-05-26 12:45:21'
     datasets:
       inputs: []
       outputs:
@@ -7223,7 +7223,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 12:37:54'
+    modifiedAt: '2023-05-26 12:45:21'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
