JEKT-2500 🔁 Modified pipeline and package names corrected config and added atl svs fsn changes in schema to add deleted field     - Pipeline        - SAP_MD_SUP_CO_BBA_BBN_BBL_HCS_MRS_ATL_SVS_FSN     - Dataset        - MD_SUP_CO

--- a/src/pipelines/MD_SUP_CO_2/pbt_aspects.yml
+++ b/src/pipelines/MD_SUP_CO_2/pbt_aspects.yml
@@ -1,8 +1,12 @@
 version: 1
 configurations:
-- btb_na
-- btb_latam
+- svs
+- bbl
 - bba
 - mrs
 - hcs
 - default
+- atl
+- bbn
+- fsn
+dependencies: []
