--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1022,14 +1022,15 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_2:
-    name: MD_SUP_CO_2_bba_btb_na_btb_latam_hcs_mrs
-    description: Mapping pipeline  ['bba', 'btb_na', 'btb_latam', 'hcs', 'mrs']
+    name: SAP_MD_SUP_CO_BBA_BBN_BBL_HCS_MRS_ATL_SVS_FSN
+    description: Mapping pipeline  ['bba', 'bbn', 'bbl', 'hcs', 'mrs', 'atl', 'svs',
+      'fsn']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:13:25'
+    modifiedAt: '2023-05-26 12:57:09'
     datasets:
       inputs: []
       outputs:
@@ -7223,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 12:45:21'
+    modifiedAt: '2023-05-26 12:54:35'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
