--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2755,7 +2755,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 07:40:04'
-    modifiedAt: '2023-05-26 09:37:19'
+    modifiedAt: '2023-05-26 12:46:42'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
@@ -2789,9 +2789,10 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-05-26 12:35:49'
-    modifiedAt: '2023-05-26 12:44:57'
+    modifiedAt: '2023-05-26 13:21:17'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_AFKO
       - datasets/DS_SAP_01_AUFK
       - datasets/DS_SAP_01_JEST
       - datasets/DS_SAP_01_TJ02T
@@ -8410,6 +8411,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-05-26 11:18:56'
         modifiedAt: '2023-05-26 11:18:56'
+  datasets/DS_SAP_01_AFKO:
+    name: DS_SAP_01_AFKO
+    description: ''
+    author: natkins7@its.jnj.com
+    createdAt: '2023-05-26 12:51:43'
+    modifiedAt: '2023-05-26 12:56:56'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: natkins7@its.jnj.com
+        createdAt: '2023-05-26 12:51:43'
+        modifiedAt: '2023-05-26 12:51:43'
 templates: {}
 jobs:
   jobs/DEV_ATL_PIPELINE_JOB:
