--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1038,14 +1038,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_3:
-    name: MD_SUP_CO_3_taishan
-    description: Mapping pipeline  ['taishan']
+    name: SAP_MD_SUP_CO_TAI
+    description: Mapping pipeline  ['tai']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:14:10'
+    modifiedAt: '2023-05-26 13:57:53'
     datasets:
       inputs: []
       outputs:
@@ -7224,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 12:54:35'
+    modifiedAt: '2023-05-26 13:27:18'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
