--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1053,14 +1053,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_4:
-    name: MD_SUP_CO_4_geu
+    name: SAP_MD_SUP_CO_GEU
     description: Mapping pipeline  ['geu']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:14:41'
+    modifiedAt: '2023-05-26 14:29:05'
     datasets:
       inputs: []
       outputs:
@@ -7224,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 13:27:18'
+    modifiedAt: '2023-05-26 14:29:05'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
