--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1068,14 +1068,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_5:
-    name: MD_SUP_CO_5_bwi
+    name: SAP_MD_SUP_CO_BWI
     description: Mapping pipeline  ['bwi']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:15:13'
+    modifiedAt: '2023-05-26 14:35:56'
     datasets:
       inputs: []
       outputs:
@@ -7224,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 14:29:05'
+    modifiedAt: '2023-05-26 14:35:56'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
