--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1098,14 +1098,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_7:
-    name: MD_SUP_CO_7_p01
+    name: SAP_MD_SUP_CO_P01
     description: Mapping pipeline  ['p01']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:16:16'
+    modifiedAt: '2023-05-26 14:57:46'
     datasets:
       inputs: []
       outputs:
@@ -7224,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 14:35:56'
+    modifiedAt: '2023-05-26 14:57:46'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
