--- a/src/datasets/MD_SUP_CO/pbt_aspects.yml
+++ b/src/datasets/MD_SUP_CO/pbt_aspects.yml
@@ -31,21 +31,21 @@ schema:
       mappings: []
       tags: []
   - name: PSTNG_BLK_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: DEL_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
   - name: LDGR_ACCT_CD
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
@@ -73,7 +73,7 @@ schema:
       mappings: []
       tags: []
   - name: BLOK_SUP_IND
-    type: string
+    type: void
     nullable: true
     metadata:
       description: ''
