--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1090,7 +1090,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-26 15:05:59'
+    modifiedAt: '2023-05-26 15:09:14'
     datasets:
       inputs: []
       outputs:
@@ -1113,14 +1113,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_8:
-    name: MD_SUP_CO_8_jet_jes
+    name: JDE_MD_SUP_CO_JET_JES
     description: Mapping pipeline  ['jet', 'jes']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:16:50'
+    modifiedAt: '2023-05-26 15:13:25'
     datasets:
       inputs: []
       outputs:
@@ -7224,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 15:05:58'
+    modifiedAt: '2023-05-26 15:13:25'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
