--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1113,14 +1113,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_8:
-    name: JDE_MD_SUP_CO_JET_JES
-    description: Mapping pipeline  ['jet', 'jes']
+    name: JDE_MD_SUP_CO_JET
+    description: Mapping pipeline  ['jet']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-26 15:13:25'
+    modifiedAt: '2023-05-26 15:20:13'
     datasets:
       inputs: []
       outputs:
