--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1128,14 +1128,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_SUP_CO_9:
-    name: MD_SUP_CO_9_bw2
-    description: Mapping pipeline  ['bw2']
+    name: JDE_MD_SUP_CO_BW2_JES_DJD
+    description: Mapping pipeline  ['bw2', 'jes', 'djd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:17:26'
+    modifiedAt: '2023-05-26 15:24:30'
     datasets:
       inputs: []
       outputs:
@@ -7224,7 +7224,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-26 15:13:25'
+    modifiedAt: '2023-05-26 15:24:30'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
