JEKT-2473🔁 Modified     - Pipeline        - SAP_MD_DOC_HDR_INVC_RCPT_HMD     - Dataset        - MD_DOC_HDR_INVC_RCPT

--- a/src/datasets/MD_DOC_HDR_INVC_RCPT/pbt_aspects.yml
+++ b/src/datasets/MD_DOC_HDR_INVC_RCPT/pbt_aspects.yml
@@ -1332,6 +1332,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _deleted_
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _pk_
     type: string
     nullable: true
@@ -1369,13 +1376,6 @@ schema:
       tags: []
   - name: DAI_UPDT_DTTM
     type: timestamp
-    nullable: false
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _deleted_
-    type: string
     nullable: false
     metadata:
       description: ''
