--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -694,14 +694,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_DOC_HDR_INVC_RCPT_1:
-    name: MD_DOC_HDR_INVC_RCPT_1_hm2
-    description: Mapping pipeline  ['hm2']
+    name: SAP_MD_DOC_HDR_INVC_RCPT_HMD
+    description: Mapping pipeline  ['hm2', 'hmd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:04:37'
+    modifiedAt: '2023-05-26 15:59:26'
     datasets:
       inputs: []
       outputs:
@@ -6008,7 +6008,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-25 03:04:36'
+    modifiedAt: '2023-05-26 15:57:28'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
