--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -928,14 +928,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/MD_PRCH_INFO_1:
-    name: MD_PRCH_INFO_1_hm2
-    description: Mapping pipeline  ['hm2']
+    name: SAP_MD_PRCH_INFO_HMD
+    description: Mapping pipeline  ['hm2', 'hmd']
     author: skostadi@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-26 17:29:57'
-    modifiedAt: '2023-05-25 03:07:09'
+    modifiedAt: '2023-05-26 16:54:35'
     datasets:
       inputs: []
       outputs:
@@ -6818,7 +6818,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-05-25 03:07:03'
+    modifiedAt: '2023-05-26 16:54:35'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
