JEKT-2083 Updated ppl descriptions, added another large amount of AFKO mappings 🔁 Modified     - Pipeline        - SAP_MD_MFG_ORDER_GEU        - SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2765,13 +2765,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_MD_MFG_ORDER_GEU:
     name: SAP_MD_MFG_ORDER_GEU
-    description: MFG Orders for HCS system
+    description: MFG Orders for GEU system
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-26 09:58:48'
-    modifiedAt: '2023-05-26 12:29:27'
+    modifiedAt: '2023-05-30 09:43:40'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AUFK
@@ -2783,13 +2783,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS:
     name: SAP_MD_MFG_ORDER_ATL_BBL_BBN_BWI_HM2_HMD_MBP_MRS_P01_SVS
-    description: MFG Orders for HCS system
+    description: ATL, BBL, BBN, BWI, HM2, HMD, MBP, MRS, P01, SVS
     author: natkins7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-05-26 12:35:49'
-    modifiedAt: '2023-05-26 15:32:27'
+    modifiedAt: '2023-05-30 10:30:04'
     datasets:
       inputs:
       - datasets/DS_SAP_01_AFKO
